added npm run test:e2e on each pull_request

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -19,3 +19,5 @@ jobs:
         working-directory: backend
       - run: npm test
         working-directory: backend
+      - run: npm run test:2e2
+        working-directory: backend
